<resources>
    <string name="app_name">RoomE</string>

    <!-- ============================================= Common ============================================= -->
    <string name="btn_next">다음</string>

    <!-- ============================================= SignIn ============================================= -->
    <string name="btn_kakao_login">카카오톡으로 계속하기</string>
    <string name="btn_google_login">구글로 계속하기</string>

    <!-- ============================================= SignUp ============================================= -->
    <string name="signup_comment">반가워요!\n닉네임을 입력해주세요</string>
    <string name="signup_nickname_comment">가입 완료 후에는 수정할 수 없으니\n신중하게 입력해주세요</string>
    <string name="signup_nickname">닉네임</string>
    <string name="signup_nickname_check">중복 체크</string>
    <string name="signup_nickname_default">2–8자리 한글, 영문, 숫자</string>
    <string name="signup_nickname_duplication">중복된 닉네임이에요</string>

    <string name="signup_tos_title">서비스 이용약관</string>
    <string name="signup_tos_all">모두 동의 (선택 정보 포함)</string>
    <string name="signup_tos_age">만 14세 이상입니다. (필수)</string>
    <string name="signup_tos_service">서비스 이용약관에 동의 (필수)</string>
    <string name="signup_tos_privacy">개인정보 수집 및 이용에 동의 (필수)</string>
    <string name="signup_tos_ad">광고 및 마케팅 수신에 동의 (선택)</string>

    <!-- ============================================= Profile Create: Welcome ============================================= -->
    <string name="profile_welcome_title">%s님\n가입을 축하드려요!</string>
    <string name="profile_welcome_comment">방탈출 취향을 가득 담은\n특별한 프로필을 만들어 볼까요?</string>
    <string name="profile_welcome_btn_create">프로필 만들기</string>
    <string name="profile_welcome_btn_skip">건너뛰기</string>

    <!-- ============================================= Profile Create: Count ============================================= -->
    <string name="profile_count_title">현재까지 경험한 방 수를\n알려주세요</string>
    <string name="profile_count_comment">프로필 생성 후 마이페이지에서 수정할 수 있어요</string>
    <string name="profile_count_hint">000번</string>
    <string-array name="profile_count_options">
        <item>선택</item>
        <item>0~30방</item>
        <item>31~60방</item>
        <item>61~99방</item>
        <item>100~150방</item>
        <item>151~200방</item>
        <item>201~300방</item>
        <item>301방 이상</item>
    </string-array>


    <!-- ============================================= Profile Create: Genres ============================================= -->
    <string name="profile_genres_title">선호하는 방탈출 장르를\n알려주세요</string>
    <string name="profile_genres_comment">최대 2개까지 선택할 수 있어요</string>

    <!-- ============================================= Profile Create: MBTI ============================================= -->
    <string name="profile_mbti_title">MBTI를 알려주세요</string>
    <string name="profile_mbti_not_add">프로필에 추가하지 않을래요</string>
    <string name="profile_mbti_e">E</string>
    <string name="profile_mbti_e_desc">외향형</string>
    <string name="profile_mbti_i">I</string>
    <string name="profile_mbti_i_desc">내향형</string>
    <string name="profile_mbti_n">N</string>
    <string name="profile_mbti_n_desc">직관형</string>
    <string name="profile_mbti_s">S</string>
    <string name="profile_mbti_s_desc">현실주의형</string>
    <string name="profile_mbti_t">T</string>
    <string name="profile_mbti_t_desc">사고형</string>
    <string name="profile_mbti_f">F</string>
    <string name="profile_mbti_f_desc">감정형</string>
    <string name="profile_mbti_j">J</string>
    <string name="profile_mbti_j_desc">계획형</string>
    <string name="profile_mbti_p">P</string>
    <string name="profile_mbti_p_desc">탐색형</string>

    <!-- ============================================= Profile Create: Strength ============================================= -->
    <string name="profile_strength_title">방탈출 할 때,\n본인의 강점이 무엇이라고\n생각하시나요?</string>
    <string name="profile_strength_comment">최대 2개까지 선택할 수 있어요</string>

    <!-- ============================================= Profile Create: Important Factors ============================================= -->
    <string name="profile_important_title">테마 선택 시,\n어떤 요소를 중요하게\n생각하시나요?</string>
    <string name="profile_important_comment">최대 2개까지 선택할 수 있어요</string>

    <!-- ============================================= Profile Create: Important HorrorTheme ============================================= -->
    <string name="profile_horror_title">공포 테마에서\n어떤 포지션인가요?</string>

    <!-- ============================================= Profile Create: Important Hint ============================================= -->
    <string name="profile_hint_title">힌트 사용에 대해\n어떻게 생각하시나요?</string>

    <!-- ============================================= Profile Create: Device vs Lock ============================================= -->
    <string name="profile_device_title">장치와 자물쇠 중\n어떤 것을 더 선호하시나요?</string>

    <!-- ============================================= Profile Create: Activity ============================================= -->
    <string name="profile_activity_title">어느 정도의 활동성을\n선호하시나요?</string>

    <!-- ============================================= Profile Create: Disliked Factors ============================================= -->
    <string name="profile_dislike_title">방탈출 할 때,\n어떤 요소를\n싫어하시나요?</string>
    <string name="profile_dislike_comment">최대 2개까지 선택할 수 있어요</string>

    <!-- ============================================= Profile Create: Color ============================================= -->
    <string name="profile_color_title">프로필 배경으로 쓰일\n색상을 골라주세요</string>

</resources>