<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/surface">

        <Toolbar
            android:id="@+id/tb_signup"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_arrow_back"
                tools:ignore="ContentDescription" />

        </Toolbar>

        <TextView
            android:id="@+id/tv_signup_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/tb_signup"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"

            android:text="@string/signup_comment"
            style="@style/headline2_bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_signup_nickname_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/tv_signup_comment"
            app:layout_constraintStart_toStartOf="@id/tv_signup_comment"
            android:layout_marginTop="12dp"

            android:text="@string/signup_nickname_comment"
            style="@style/body2_regular"
            android:textColor="@color/on_surface_variant"/>

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/tv_signup_nickname_comment"
            app:layout_constraintStart_toStartOf="@id/tv_signup_comment"
            android:layout_marginTop="24dp"

            android:text="@string/signup_nickname"
            style="@style/label_bold"
            android:textColor="@color/on_surface"/>

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="0dp"
            android:layout_height="48dp"

            app:layout_constraintTop_toBottomOf="@id/tv_nickname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_nickname_check"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:paddingHorizontal="16dp"

            android:background="@drawable/shape_edit_text"
            style="@style/body2_regular"
            android:textColor="@color/on_surface"
            android:inputType="text"
            android:maxLength="8"

            tools:ignore="Autofill, LabelFor" />

        <ImageButton
            android:id="@+id/btn_clear"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintTop_toTopOf="@id/et_nickname"
            app:layout_constraintBottom_toBottomOf="@id/et_nickname"
            app:layout_constraintEnd_toEndOf="@id/et_nickname"

            android:src="@drawable/ic_clear"
            android:background="@color/transparent"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_nickname_check"
            android:layout_width="84dp"
            android:layout_height="48dp"

            app:layout_constraintTop_toTopOf="@id/et_nickname"
            app:layout_constraintBottom_toBottomOf="@id/et_nickname"
            app:layout_constraintStart_toEndOf="@id/et_nickname"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="12dp"

            android:background="@drawable/shape_edit_text"
            android:backgroundTint="@color/primary_primary"

            android:text="@string/signup_nickname_check"
            style="@style/title3_bold"
            android:textColor="@color/surface"/>


        <TextView
            android:id="@+id/tv_nickname_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/et_nickname"
            app:layout_constraintStart_toStartOf="@id/et_nickname"
            android:layout_marginTop="8dp"

            android:text="@string/signup_nickname_default"
            style="@style/caption"
            android:textColor="@color/on_surface"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"

            android:background="@color/primary_primary"

            android:text="@string/btn_next"
            style="@style/title2_bold"
            android:textColor="@color/surface"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>