<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/surface">

        <TextView
            android:id="@+id/tv_strength_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"

            style="@style/headline2_bold"
            android:textColor="@color/on_surface"
            android:text="@string/profile_strength_title"/>

        <TextView
            android:id="@+id/tv_strength_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/tv_strength_title"
            app:layout_constraintStart_toStartOf="@id/tv_strength_title"
            android:layout_marginTop="12dp"

            android:text="@string/profile_strength_comment"
            style="@style/body2_regular"
            android:textColor="@color/on_surface_variant"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_strength"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="24dp"

            app:layout_constraintTop_toBottomOf="@id/tv_strength_comment"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="24dp"
            tools:listitem="@layout/item_chip"/>
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/shape_gradient_background"
            android:padding="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:background="@drawable/shape_radius_12"
                android:backgroundTint="@color/btn_disabled"

                android:text="@string/btn_next"
                android:textColor="@color/on_surface_variant"
                style="@style/title2_bold"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>