<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/surface">

        <TextView
            android:id="@+id/tv_genres_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"

            style="@style/headline2_bold"
            android:textColor="@color/on_surface"
            android:text="@string/profile_mbti_title"/>

        <GridView
            android:id="@+id/gv_mbit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"

            app:layout_constraintTop_toBottomOf="@id/tv_genres_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"

            tools:listitem="@layout/custom_toggle_button"
            android:numColumns="2"
            android:horizontalSpacing="12dp"
            android:verticalSpacing="12dp"
            />

        <CheckBox
            android:id="@+id/cb_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/gv_mbit"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"

            android:button="@null"
            android:background="@drawable/selector_circle_check_box" />

        <TextView
            android:id="@+id/tv_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="@id/cb_option"
            app:layout_constraintBottom_toBottomOf="@id/cb_option"
            app:layout_constraintStart_toEndOf="@id/cb_option"
            android:layout_marginStart="8dp"

            android:text="@string/profile_mbti_not_add"
            style="@style/body2_regular"
            android:textColor="@color/on_surface"/>

        <FrameLayout
            android:id="@+id/fl_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/shape_gradient_background"
            android:padding="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:background="@drawable/shape_radius_12"
                android:backgroundTint="@color/btn_disabled"

                android:text="@string/btn_next"
                android:textColor="@color/on_surface_variant"
                style="@style/title3_bold"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>